Remove extra space
Closes #12472

Signed-off-by: Anton Klaren <anton.klaren@neotechnology.com>